update Class_func and Map

--- a/KCWI_script/map_generator.ipynb
+++ b/KCWI_script/map_generator.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### This notebook import everything in Map.py and do some preprocess for these maps(interpolate and smooth it). It write the new maps to .txt for plot after the preprocess."
+    "### This notebook import everything in Map.py and do some preprocess for these maps(interpolate and smooth it). It write the new maps to .txt for plot after the preprocess."
    ]
   },
   {
@@ -24,20 +24,23 @@
     "from astropy import units as u\n",
     "from astropy import constants as const\n",
     "from Class_func import Img_interpsmooth\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import "
+    "#### Import "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -49,13 +52,20 @@
       "WARNING: Could not parse unit FLAM16 [spectral_cube.cube_utils]\n",
       "WARNING: VerifyWarning: Invalid 'BLANK' keyword in header.  The 'BLANK' keyword is only applicable to integer data, and will be ignored in this HDU. [astropy.io.fits.hdu.image]\n",
       "WARNING: Could not parse unit FLAM16 [spectral_cube.cube_utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11ba4dea0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11ba4dea0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11ba4dea0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
+      "WARNING: VarianceWarning: Note that the second moment returned will be a variance map. To get a linewidth map, use the SpectralCube.linewidth_fwhm() or SpectralCube.linewidth_sigma() methods instead. [spectral_cube.spectral_cube]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
       "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
       "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
       "  np.nansum(data, axis=axis))\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11ba4dea0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
       "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
       "WARNING: VarianceWarning: Note that the second moment returned will be a variance map. To get a linewidth map, use the SpectralCube.linewidth_fwhm() or SpectralCube.linewidth_sigma() methods instead. [spectral_cube.spectral_cube]\n",
       "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
@@ -64,41 +74,18 @@
       "  np.nansum(data, axis=axis))\n",
       "/usr/local/lib/python3.7/site-packages/astropy/units/quantity.py:464: RuntimeWarning: invalid value encountered in power\n",
       "  result = super().__array_ufunc__(function, method, *arrays, **kwargs)\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11ba4dea0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11ba4dea0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11ba4dea0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
       "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
-      "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  np.nansum(data, axis=axis))\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11ba4dea0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
       "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
-      "WARNING: VarianceWarning: Note that the second moment returned will be a variance map. To get a linewidth map, use the SpectralCube.linewidth_fwhm() or SpectralCube.linewidth_sigma() methods instead. [spectral_cube.spectral_cube]\n",
-      "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  np.nansum(data, axis=axis))\n",
-      "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:179: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  np.nansum(data, axis=axis))\n",
-      "/usr/local/lib/python3.7/site-packages/astropy/units/quantity.py:464: RuntimeWarning: invalid value encountered in power\n",
-      "  result = super().__array_ufunc__(function, method, *arrays, **kwargs)\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11ba4dea0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11ba4dea0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11ba4dea0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
-      "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  np.nansum(data, axis=axis))\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11ba4dea0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
-      "WARNING: VarianceWarning: Note that the second moment returned will be a variance map. To get a linewidth map, use the SpectralCube.linewidth_fwhm() or SpectralCube.linewidth_sigma() methods instead. [spectral_cube.spectral_cube]\n",
-      "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  np.nansum(data, axis=axis))\n",
-      "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:179: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  np.nansum(data, axis=axis))\n",
-      "/usr/local/lib/python3.7/site-packages/astropy/units/quantity.py:464: RuntimeWarning: invalid value encountered in power\n",
-      "  result = super().__array_ufunc__(function, method, *arrays, **kwargs)\n"
+      "WARNING: VarianceWarning: Note that the second moment returned will be a variance map. To get a linewidth map, use the SpectralCube.linewidth_fwhm() or SpectralCube.linewidth_sigma() methods instead. [spectral_cube.spectral_cube]\n"
      ]
     }
    ],
    "source": [
-    "from Map import lyoptimalcube,lysnrmap,lyvelocitymap,lydispersionmap,lynemissioncube,\\\n",
+    "from Map import lyoptimalcube,lysnrmap,lyvelocitymap,lydispersionmap,lyemissioncube,\\\n",
     "    heiioptimalcube,heiisnrmap,heiivelocitymap,heiidispersionmap,\\\n",
     "    civoptimalcube,civsnrmap,civvelocitymap,civdispersionmap"
    ]
@@ -118,10 +105,6 @@
     "    '''\n",
     "    velocitymap[np.isnan(velocitymap)]=0\n",
     "    dispersionmap[np.isnan(dispersionmap)]=0\n",
-    "    \n",
-    "    optimalcube.optimal_img[snrmap<noise_level]=0.\n",
-    "    velocitymap[snrmap<noise_level]=0.\n",
-    "    dispersionmap[snrmap<noise_level]=0.\n",
     "\n",
     "\n",
     "    optimalimg_inter,x_inter,y_inter=Img_interpsmooth(optimalcube.optimal_img,\n",
@@ -138,6 +121,7 @@
     "    dispersionmap_inter,_,_=Img_interpsmooth(dispersionmap,\n",
     "                                            optimalcube.ra.to(u.arcsec).value,\n",
     "                                            optimalcube.dec.to(u.arcsec).value,[5,9])\n",
+    "    \n",
     "\n",
     "    optimalimg_inter[snrmap_inter<noise_level]=999\n",
     "    velocitymap_inter[snrmap_inter<noise_level]=np.nan\n",
@@ -156,19 +140,21 @@
    "outputs": [],
    "source": [
     "optimalimg,velocitymap,dispersionmap,snrmap,x,y=preprocess(lyoptimalcube,lyvelocitymap,\n",
-    "                                                          lydispersionmap,lysnrmap)\n",
+    "                                                          lydispersionmap,lysnrmap,2.9)\n",
+    "\n",
+    "\n",
     "optimalimg[optimalimg==999]=0\n",
     "optimalimg=optimalimg*1e3\n",
     "noise=np.random.normal(0,.5,optimalimg.shape)\n",
     "optimalimg+=noise\n",
     "\n",
-    "dirc='/Users/shiwuzhang/WS/ASTRO/MAMMOTH_KCWI/analysis results/newresults/ly/'\n",
-    "np.savetxt(dirc+'lyimg.out',optimalimg,delimiter=',')\n",
-    "np.savetxt(dirc+'lyvelo.out',velocitymap,delimiter=',')\n",
-    "np.savetxt(dirc+'lysnr.out',snrmap,delimiter=',')\n",
-    "np.savetxt(dirc+'lydisp.out',dispersionmap,delimiter=',')\n",
-    "np.savetxt(dirc+'lyx',x,delimiter=',')\n",
-    "np.savetxt(dirc+'lyy',y,delimiter=',')"
+    "# dirc='/Users/shiwuzhang/WS/ASTRO/MAMMOTH_KCWI/analysis results/newresults/ly/'\n",
+    "# np.savetxt(dirc+'lyimg.out',optimalimg,delimiter=',')\n",
+    "# np.savetxt(dirc+'lyvelo.out',velocitymap,delimiter=',')\n",
+    "# np.savetxt(dirc+'lysnr.out',snrmap,delimiter=',')\n",
+    "# np.savetxt(dirc+'lydisp.out',dispersionmap,delimiter=',')\n",
+    "# np.savetxt(dirc+'lyx',x,delimiter=',')\n",
+    "# np.savetxt(dirc+'lyy',y,delimiter=',')"
    ]
   },
   {
@@ -178,7 +164,8 @@
    "outputs": [],
    "source": [
     "optimalimg,velocitymap,dispersionmap,snrmap,x,y=preprocess(heiioptimalcube,heiivelocitymap,\n",
-    "                                                          heiidispersionmap,heiisnrmap,noise_level=2)\n",
+    "                                                          heiidispersionmap,heiisnrmap,noise_level=2.2)\n",
+    "\n",
     "\n",
     "optimalimg[optimalimg==999]=np.power(10,-2.8)\n",
     "optimalimg=optimalimg*1e3\n",
@@ -201,7 +188,7 @@
    "outputs": [],
    "source": [
     "optimalimg,velocitymap,dispersionmap,snrmap,x,y=preprocess(civoptimalcube,civvelocitymap,\n",
-    "                                                          civdispersionmap,civsnrmap,noise_level=2.)\n",
+    "                                                          civdispersionmap,civsnrmap,noise_level=2.25)\n",
     "\n",
     "optimalimg[optimalimg==999]=np.power(10,-2.8)\n",
     "optimalimg=optimalimg*1e3\n",
