update Class_func and Map

--- a/KCWI_script/map_generator.ipynb
+++ b/KCWI_script/map_generator.ipynb
@@ -38,9 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -52,20 +50,26 @@
       "WARNING: Could not parse unit FLAM16 [spectral_cube.cube_utils]\n",
       "WARNING: VerifyWarning: Invalid 'BLANK' keyword in header.  The 'BLANK' keyword is only applicable to integer data, and will be ignored in this HDU. [astropy.io.fits.hdu.image]\n",
       "WARNING: Could not parse unit FLAM16 [spectral_cube.cube_utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
-      "WARNING: VarianceWarning: Note that the second moment returned will be a variance map. To get a linewidth map, use the SpectralCube.linewidth_fwhm() or SpectralCube.linewidth_sigma() methods instead. [spectral_cube.spectral_cube]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12035e158>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12035e158>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12035e158>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
       "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
       "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
       "  np.nansum(data, axis=axis))\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12035e158>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
+      "WARNING: VarianceWarning: Note that the second moment returned will be a variance map. To get a linewidth map, use the SpectralCube.linewidth_fwhm() or SpectralCube.linewidth_sigma() methods instead. [spectral_cube.spectral_cube]\n",
+      "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  np.nansum(data, axis=axis))\n",
+      "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:179: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  np.nansum(data, axis=axis))\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12035e158>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12035e158>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12035e158>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
+      "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  np.nansum(data, axis=axis))\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12035e158>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
       "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
       "WARNING: VarianceWarning: Note that the second moment returned will be a variance map. To get a linewidth map, use the SpectralCube.linewidth_fwhm() or SpectralCube.linewidth_sigma() methods instead. [spectral_cube.spectral_cube]\n",
       "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
@@ -74,13 +78,21 @@
       "  np.nansum(data, axis=axis))\n",
       "/usr/local/lib/python3.7/site-packages/astropy/units/quantity.py:464: RuntimeWarning: invalid value encountered in power\n",
       "  result = super().__array_ufunc__(function, method, *arrays, **kwargs)\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12035e158>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12035e158>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12035e158>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
       "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
-      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x11e2390d0>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
+      "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  np.nansum(data, axis=axis))\n",
+      "WARNING: PossiblySlowWarning: This function (<function BaseSpectralCube.mean at 0x12035e158>) requires loading the entire cube into memory and may therefore be slow. [spectral_cube.utils]\n",
       "WARNING: ExperimentalImplementationWarning: Support for air wavelengths is experimental and only works in the forward direction (air->vac, not vac->air). [spectral_cube.spectral_axis]\n",
-      "WARNING: VarianceWarning: Note that the second moment returned will be a variance map. To get a linewidth map, use the SpectralCube.linewidth_fwhm() or SpectralCube.linewidth_sigma() methods instead. [spectral_cube.spectral_cube]\n"
+      "WARNING: VarianceWarning: Note that the second moment returned will be a variance map. To get a linewidth map, use the SpectralCube.linewidth_fwhm() or SpectralCube.linewidth_sigma() methods instead. [spectral_cube.spectral_cube]\n",
+      "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:169: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  np.nansum(data, axis=axis))\n",
+      "/usr/local/lib/python3.7/site-packages/spectral_cube/_moments.py:179: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  np.nansum(data, axis=axis))\n",
+      "/usr/local/lib/python3.7/site-packages/astropy/units/quantity.py:464: RuntimeWarning: invalid value encountered in power\n",
+      "  result = super().__array_ufunc__(function, method, *arrays, **kwargs)\n"
      ]
     }
    ],
@@ -135,26 +147,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "optimalimg,velocitymap,dispersionmap,snrmap,x,y=preprocess(lyoptimalcube,lyvelocitymap,\n",
-    "                                                          lydispersionmap,lysnrmap,2.9)\n",
-    "\n",
+    "                                                          lydispersionmap,lysnrmap,3.)\n",
     "\n",
     "optimalimg[optimalimg==999]=0\n",
     "optimalimg=optimalimg*1e3\n",
     "noise=np.random.normal(0,.5,optimalimg.shape)\n",
     "optimalimg+=noise\n",
     "\n",
-    "# dirc='/Users/shiwuzhang/WS/ASTRO/MAMMOTH_KCWI/analysis results/newresults/ly/'\n",
-    "# np.savetxt(dirc+'lyimg.out',optimalimg,delimiter=',')\n",
-    "# np.savetxt(dirc+'lyvelo.out',velocitymap,delimiter=',')\n",
-    "# np.savetxt(dirc+'lysnr.out',snrmap,delimiter=',')\n",
-    "# np.savetxt(dirc+'lydisp.out',dispersionmap,delimiter=',')\n",
-    "# np.savetxt(dirc+'lyx',x,delimiter=',')\n",
-    "# np.savetxt(dirc+'lyy',y,delimiter=',')"
+    "dirc='/Users/shiwuzhang/WS/ASTRO/MAMMOTH_KCWI/analysis results/newresults/ly/'\n",
+    "np.savetxt(dirc+'lyimg.out',optimalimg,delimiter=',')\n",
+    "np.savetxt(dirc+'lyvelo.out',velocitymap,delimiter=',')\n",
+    "np.savetxt(dirc+'lysnr.out',snrmap,delimiter=',')\n",
+    "np.savetxt(dirc+'lydisp.out',dispersionmap,delimiter=',')\n",
+    "np.savetxt(dirc+'lyx',x,delimiter=',')\n",
+    "np.savetxt(dirc+'lyy',y,delimiter=',')"
    ]
   },
   {
@@ -164,7 +175,7 @@
    "outputs": [],
    "source": [
     "optimalimg,velocitymap,dispersionmap,snrmap,x,y=preprocess(heiioptimalcube,heiivelocitymap,\n",
-    "                                                          heiidispersionmap,heiisnrmap,noise_level=2.2)\n",
+    "                                                          heiidispersionmap,heiisnrmap,noise_level=3.)\n",
     "\n",
     "\n",
     "optimalimg[optimalimg==999]=np.power(10,-2.8)\n",
@@ -188,7 +199,7 @@
    "outputs": [],
    "source": [
     "optimalimg,velocitymap,dispersionmap,snrmap,x,y=preprocess(civoptimalcube,civvelocitymap,\n",
-    "                                                          civdispersionmap,civsnrmap,noise_level=2.25)\n",
+    "                                                          civdispersionmap,civsnrmap,noise_level=3.)\n",
     "\n",
     "optimalimg[optimalimg==999]=np.power(10,-2.8)\n",
     "optimalimg=optimalimg*1e3\n",
