--- a/paper/ApJtemplate/template.bib
+++ b/paper/ApJtemplate/template.bib
@@ -135,4 +135,270 @@
   pages={A14},
   year={2015},
   publisher={EDP Sciences}}
-  
+  @article{churazov2005supermassive,
+  title={Supermassive black holes in elliptical galaxies: switching from very bright to very dim},
+  author={Churazov, Eugene and Sazonov, S and Sunyaev, R and Forman, W and Jones, C and B{\"o}hringer, H},
+  journal={Monthly Notices of the Royal Astronomical Society: Letters},
+  volume={363},
+  number={1},
+  pages={L91--L95},
+  year={2005},
+  publisher={Blackwell Science Ltd Oxford, UK}}
+  @article{bower2006breaking,
+  title={Breaking the hierarchy of galaxy formation},
+  author={Bower, Richard G and Benson, AJ and Malbon, R and Helly, JC and Frenk, CS and Baugh, CM and Cole, Shaun and Lacey, Cedric G},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={370},
+  number={2},
+  pages={645--655},
+  year={2006},
+  publisher={Blackwell Publishing Ltd Oxford, UK}}
+  @article{mccarthy2011gas,
+  title={Gas expulsion by quasar-driven winds as a solution to the overcooling problem in galaxy groups and clusters},
+  author={McCarthy, Ian G and Schaye, Joop and Bower, Richard G and Ponman, Trevor J and Booth, Craig M and Vecchia, C Dalla and Springel, Volker},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={412},
+  number={3},
+  pages={1965--1984},
+  year={2011},
+  publisher={Blackwell Publishing Ltd Oxford, UK}}
+  @article{croton2006many,
+  title={The many lives of active galactic nuclei: cooling flows, black holes and the luminosities and colours of galaxies},
+  author={Croton, Darren J and Springel, Volker and White, Simon DM and De Lucia, Gabriella and Frenk, Carlos S and Gao, Liang and Jenkins, Adrian and Kauffmann, Guinevere and Navarro, JF and Yoshida, Naoki},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={365},
+  number={1},
+  pages={11--28},
+  year={2006},
+  publisher={Blackwell Science Ltd Oxford, UK}}
+  @article{somerville2008semi,
+  title={A semi-analytic model for the co-evolution of galaxies, black holes and active galactic nuclei},
+  author={Somerville, Rachel S and Hopkins, Philip F and Cox, Thomas J and Robertson, Brant E and Hernquist, Lars},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={391},
+  number={2},
+  pages={481--506},
+  year={2008},
+  publisher={Blackwell Publishing Ltd Oxford, UK}}
+  @article{benson2003shapes,
+  title={What shapes the luminosity function of galaxies?},
+  author={Benson, AJ and Bower, RG and Frenk, CS and Lacey, Cedric G and Baugh, CM and Cole, Shaun},
+  journal={The Astrophysical Journal},
+  volume={599},
+  number={1},
+  pages={38},
+  year={2003},
+  publisher={IOP Publishing}}
+  @article{hopkins2006normalization,
+  title={On the normalization of the cosmic star formation history},
+  author={Hopkins, Andrew M and Beacom, John F},
+  journal={The Astrophysical Journal},
+  volume={651},
+  number={1},
+  pages={142},
+  year={2006},
+  publisher={IOP Publishing}}
+  @article{debuhr2012galaxy,
+  title={Galaxy-scale outflows driven by active galactic nuclei},
+  author={DeBuhr, Jackson and Quataert, Eliot and Ma, Chung-Pei},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={420},
+  number={3},
+  pages={2221--2231},
+  year={2012},
+  publisher={Blackwell Publishing Ltd Oxford, UK}}
+  @article{fabian1999obscured,
+  title={The obscured growth of massive black holes},
+  author={Fabian, AC},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={308},
+  number={4},
+  pages={L39--L43},
+  year={1999},
+  publisher={Blackwell Science Ltd Oxford, UK}}
+  @article{granato2004physical,
+  title={A physical model for the coevolution of QSOs and their spheroidal hosts},
+  author={Granato, Gian Luigi and De Zotti, Gianfranco and Silva, Laura and Bressan, Alessandro and Danese, Luigi},
+  journal={The Astrophysical Journal},
+  volume={600},
+  number={2},
+  pages={580},
+  year={2004},
+  publisher={IOP Publishing}}
+  @article{king2011large,
+  title={Large-scale outflows in galaxies},
+  author={King, AR and Zubovas, K and Power, C},
+  journal={Monthly Notices of the Royal Astronomical Society: Letters},
+  volume={415},
+  number={1},
+  pages={L6--L10},
+  year={2011},
+  publisher={Blackwell Science Ltd Oxford, UK}}
+  @article{faucher2012physics,
+  title={The physics of galactic winds driven by active galactic nuclei},
+  author={Faucher-Gigu{\`e}re, Claude-Andr{\'e} and Quataert, Eliot},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={425},
+  number={1},
+  pages={605--622},
+  year={2012},
+  publisher={Blackwell Science Ltd Oxford, UK}}
+  @article{borgani2008chemical,
+  title={The chemical enrichment of the ICM from hydrodynamical simulations},
+  author={Borgani, Stefano and Fabjan, D and Tornatore, L and Schindler, S and Dolag, K and Diaferio, Antonaldo},
+  journal={Space Science Reviews},
+  volume={134},
+  number={1-4},
+  pages={379--403},
+  year={2008},
+  publisher={Springer}}
+  @article{wiersma2009chemical,
+  title={Chemical enrichment in cosmological, smoothed particle hydrodynamics simulations},
+  author={Wiersma, Robert PC and Schaye, Joop and Theuns, Tom and Dalla Vecchia, Claudio and Tornatore, Luca},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={399},
+  number={2},
+  pages={574--600},
+  year={2009},
+  publisher={Blackwell Publishing Ltd Oxford, UK}}
+  @article{fabjan2010simulating,
+  title={Simulating the effect of active galactic nuclei feedback on the metal enrichment of galaxy clusters},
+  author={Fabjan, D and Borgani, Stefano and Tornatore, Luca and Saro, Alexandro and Murante, G and Dolag, K},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={401},
+  number={3},
+  pages={1670--1690},
+  year={2010},
+  publisher={Blackwell Publishing Ltd Oxford, UK}}
+  @article{ciotti2010feedback,
+  title={Feedback from central black holes in elliptical galaxies. III. Models with both radiative and mechanical feedback},
+  author={Ciotti, Luca and Ostriker, Jeremiah P and Proga, Daniel},
+  journal={The Astrophysical Journal},
+  volume={717},
+  number={2},
+  pages={708},
+  year={2010},
+  publisher={IOP Publishing}}
+  @article{nayakshin2012quasar,
+  title={Quasar feedback: accelerated star formation and chaotic accretion},
+  author={Nayakshin, Sergei and Zubovas, Kastytis},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={427},
+  number={1},
+  pages={372--378},
+  year={2012},
+  publisher={The Royal Astronomical Society}}
+  @article{ishibashi2012active,
+  title={Active galactic nucleus feedback and triggering of star formation in galaxies},
+  author={Ishibashi, W and Fabian, AC},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={427},
+  number={4},
+  pages={2998--3005},
+  year={2012},
+  publisher={Blackwell Science Ltd Oxford, UK}}
+  @article{silk2013unleashing,
+  title={Unleashing positive feedback: linking the rates of star formation, supermassive black hole accretion, and outflows in distant galaxies},
+  author={Silk, Joseph},
+  journal={The Astrophysical Journal},
+  volume={772},
+  number={2},
+  pages={112},
+  year={2013},
+  publisher={IOP Publishing}}
+  @article{nesvadba2008evidence,
+  title={Evidence for powerful AGN winds at high redshift: dynamics of galactic outflows in radio galaxies during the “Quasar Era”},
+  author={Nesvadba, NPH and Lehnert, MD and De Breuck, C and Gilbert, AM and Van Breugel, W},
+  journal={Astronomy \& Astrophysics},
+  volume={491},
+  number={2},
+  pages={407--424},
+  year={2008},
+  publisher={EDP Sciences}}
+  @article{wang2011hierarchical,
+  title={Hierarchical fragmentation and jet-like outflows in IRDC G28. 34+ 0.06: a growing massive protostar cluster},
+  author={Wang, Ke and Zhang, Qizhou and Wu, Yuefang and Zhang, Huawei},
+  journal={The Astrophysical Journal},
+  volume={735},
+  number={1},
+  pages={64},
+  year={2011},
+  publisher={IOP Publishing}}
+  @article{mullaney2013narrow,
+  title={Narrow-line region gas kinematics of 24 264 optically selected AGN: the radio connection},
+  author={Mullaney, JR and Alexander, DM and Fine, S and Goulding, AD and Harrison, CM and Hickox, RC},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={433},
+  number={1},
+  pages={622--638},
+  year={2013},
+  publisher={The Royal Astronomical Society}}
+  @article{rupke2019100,
+  title={A 100-kiloparsec wind feeding the circumgalactic medium of a massive compact galaxy},
+  author={Rupke, David SN and Coil, Alison and Geach, James E and Tremonti, Christy and Diamond-Stanic, Aleksandar M and George, Erin R and Hickox, Ryan C and Kepley, Amanda A and Leung, Gene and Moustakas, John and others},
+  journal={Nature},
+  volume={574},
+  number={7780},
+  pages={643--646},
+  year={2019},
+  publisher={Nature Publishing Group}}
+  @article{schmidt1983quasar,
+  title={Quasar evolution derived from the Palomar bright quasar survey and other complete quasar surveys},
+  author={Schmidt, M and Green, RF},
+  journal={The Astrophysical Journal},
+  volume={269},
+  pages={352--374},
+  year={1983}}
+  @article{richards2006sloan,
+  title={The sloan digital sky survey quasar survey: Quasar luminosity function from data release 3},
+  author={Richards, Gordon T and Strauss, Michael A and Fan, Xiaohui and Hall, Patrick B and Jester, Sebastian and Schneider, Donald P and Berk, Daniel E Vanden and Stoughton, Chris and Anderson, Scott F and Brunner, Robert J and others},
+  journal={The Astronomical Journal},
+  volume={131},
+  number={6},
+  pages={2766},
+  year={2006},
+  publisher={IOP Publishing}}
+  @article{chapman2005redshift,
+  title={A redshift survey of the submillimeter galaxy population},
+  author={Chapman, Scott C and Blain, AW and Smail, Ian and Ivison, RJ},
+  journal={The Astrophysical Journal},
+  volume={622},
+  number={2},
+  pages={772},
+  year={2005},
+  publisher={IOP Publishing}}
+  @article{wardlow2011laboca,
+  title={The LABOCA survey of the Extended Chandra Deep Field-South: a photometric redshift survey of submillimetre galaxies},
+  author={Wardlow, Julie L and Smail, Ian and Coppin, KEK and Alexander, DM and Brandt, William Nielsen and Danielson, ALR and Luo, B and Swinbank, AM and Walter, F and Wei{\ss}, A and others},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={415},
+  number={2},
+  pages={1479--1508},
+  year={2011},
+  publisher={Blackwell Publishing Ltd Oxford, UK}}
+  @article{madau1996high,
+  title={High-redshift galaxies in the Hubble Deep Field: colour selection and star formation history to z~ 4},
+  author={Madau, Piero and Ferguson, Henry C and Dickinson, Mark E and Giavalisco, Mauro and Steidel, Charles C and Fruchter, Andrew},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={283},
+  number={4},
+  pages={1388--1404},
+  year={1996},
+  publisher={Blackwell Science Ltd Oxford, UK}}
+  @article{lilly1999canada,
+  title={The Canada-United Kingdom deep submillimeter survey. II. First identifications, redshifts, and implications for galaxy evolution},
+  author={Lilly, Simon J and Eales, Stephen A and Gear, Walter KP and Hammer, Fran{\c{c}}ois and Le F{\`e}vre, Olivier and Crampton, David and Bond, J Richard and Dunne, Loretta},
+  journal={The Astrophysical Journal},
+  volume={518},
+  number={2},
+  pages={641},
+  year={1999},
+  publisher={IOP Publishing}}
+  @article{madau2014cosmic,
+  title={Cosmic star-formation history},
+  author={Madau, Piero and Dickinson, Mark},
+  journal={Annual Review of Astronomy and Astrophysics},
+  volume={52},
+  pages={415--486},
+  year={2014},
+  publisher={Annual Reviews}}
